--- a/dados.html
+++ b/dados.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="format-detection" content="telephone=no">
     <title>Lista de Presentes</title>
 
     <link rel="stylesheet" href="./css/style.css" />
@@ -49,7 +50,7 @@
 
     <section class="section-dados" style="height: 100vh;">
       <h2 id="pix-descricao">
-        Pix: <span style="font-size: 2rem; color:black;">16 99415-0636</span>
+        Pix: <a href="tel: 16 99415-0636" style="font-size: 2rem; color:black;">16 99415-0636</a>
       </h2>
       <h2 style="margin-bottom: 100px;" id="pix-descricao">Tamiris P. De Almeida</h2>
 
